# SnakeGame_Qt_skillbox_cpp_prac_work8

./: CMakeLists.txt  main.cpp  snake.cpp  snake.h
